[tool.poetry]
name = "marine-spiking-slam"
version = "0.1.0"
description = "Marine spiking neural network SLAM with CV-based obstacle avoidance"
authors = []
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python     = "^3.10"
numpy      = "^2.0"
scipy      = "^1.13"
opencv-python = "^4.10"
matplotlib = "^3.9"

[tool.poetry.scripts]
marine-slam = "src.main:run_full_system"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
